--- a/views/admin/partials/postulados.jade
+++ b/views/admin/partials/postulados.jade
@@ -26,5 +26,5 @@ div.data_container
                         div(input-inline-edit="p.ciudad" ng-focus="edit()"  tabindex="{{ $index*10 + 1 }}")
                       td 
                         button.action(ng-show="is_dirty(p)" ng-click="save_postulado(p)") Salvar 
-                        button.action(ng-hide="is_dirty(p)") Eliminar
+                        button.action(ng-hide="is_dirty(p)" ng-click="delete_postulado(p)") Eliminar
                         button.action(ng-click="view_postulado(p.cedula)" ) Ver
