--- a/views/inicio.jade
+++ b/views/inicio.jade
@@ -1,5 +1,5 @@
 !!! 5
-html(ng-app="jusypazApp" manifest="/cache.manifest" type="text/cache-manifest")
+html(ng-app="jusypazNormalApp" manifest="/cache.manifest" type="text/cache-manifest")
   head
     link(rel='stylesheet', href='/css/main.css') 
     link(href="/css/bootstrap.min.css" rel="stylesheet")
@@ -12,20 +12,16 @@ html(ng-app="jusypazApp" manifest="/cache.manifest" type="text/cache-manifest")
     script(src="/js/angular-resource.min.js")
     //script(src="/js/ui-bootstrap-0.6.0.min.js")
     script(src="/js/ui-bootstrap-tpls-0.6.0.min.js")
-    script(src='/js/app.js')
-    script(src='/js/ad_ctrl.js')
-    script(src='/js/postulado_ctrl.js')
-    script(src='/js/inline.js')
+    script(src='/js/normalApp.js')
+    script(src='/js/postulado_ctrl_normal.js')
+    script(src='/js/inline_normal.js')
     script(src='/js/file_upload.js')
 
-    title jusypaz - Tablero de inicio
+    title jusypaz - Página de inicio
 
   body
     div.navigation_header.centered
-      img.header_logo(width="40px", height="40px", src="/img/logo_small.png")
-
-      div.inline.cedula_input_div(ng-controller="ConsultaCtrl")
-        input.cedula_input(ng-model="cedula" required on-enter="consulta_cedula()")
+      img.header_logo(width="40px", height="40px", src="/img/logo_small.png")      
       
       div.header_actions.inline(ng-controller="MenuCtrl")
         div.menu_wrapper.inline
@@ -33,8 +29,6 @@ html(ng-app="jusypazApp" manifest="/cache.manifest" type="text/cache-manifest")
               li.header_menu_item(ng-mouseleave="hide_menu()" ng-mouseover="animate_menu()")
                 img.inline(width="24" src="/img/conf.png")
                 ul.header_submenu(ng-show="show_submenu")
-                  li.header_submenu_item(ng-click="admin_postulados()")  Administración Postulados
-                  li.header_submenu_item(ng-click="admin_users()") Administración Usuarios 
                   li.header_submenu_item(ng-click="config()") Configuraciones 
                   li.header_submenu_item(ng-click="logout()") Logout 
 
