--- a/views/partials/input-inline-select-menor.jade
+++ b/views/partials/input-inline-select-menor.jade
@@ -1,6 +1,6 @@
 div(class="input_inline_edit_div")
-   if is_admin
-     select(class="inline_edit_select" ng-options="c.nombre as c.nombre for c in opciones" ng-model="model" on-tab="tab()" on-enter="save()" on-blur="blur()" on-esc="cancel()" ng-show="editMode" tabindex="{{tabindex}}" ng-focus="edit()")
+   if is_admin   
+     select(class="inline_edit_select" ng-options="c.status as c.status for c in opciones" ng-model="model" on-tab="tab()" on-enter="save()" on-blur="blur()" on-esc="cancel()" ng-show="editMode" tabindex="{{tabindex}}" ng-focus="edit()")
      span(ng-mouseenter="showEdit = true" ng-mouseleave="showEdit = false")
        span(ng-hide="editMode" ng-click="edit()" ) 
          div(class="inline_edit_text")
