--- a/views/partials/jyp.jade
+++ b/views/partials/jyp.jade
@@ -4,9 +4,9 @@ div.info
         div.tab_content(ng-include="'/partials/jyp_delitos'")
       tab.info_tab(heading="Fosas" select="jyp_fosas()")
          div.tab_content(ng-include="'/partials/jyp_fosas'")
-      tab.info_tab(heading="Operaciones Conjuntas" select="jyp_opconjuntas()")
+      tab.info_tab(heading="Operaciones Conjuntas" select="jyp_op_conjuntas()")
          div.tab_content(ng-include="'/partials/jyp_opconjuntas'")
-      tab.info_tab(heading="Relaciones Autoridades" select="jyp_autoridades()")
-         div.tab_content(ng-include="'/partials/jyp_autoridades'")
-      tab.info_tab(heading="Parapolítica" select="jyp_parapolitica()")
+      tab.info_tab(heading="Relaciones Autoridades" select="jyp_relauts()")
+         div.tab_content(ng-include="'/partials/jyp_relaut'")
+      tab.info_tab(heading="Parapolítica" select="jyp_parapoliticas()")
          div.tab_content(ng-include="'/partials/jyp_parapolitica'")  
