--- a/views/partials/proc.jade
+++ b/views/partials/proc.jade
@@ -1,2 +1,42 @@
 div.info
-   h1 Procesos
+   div.info_wrapper
+      div.navegacion_hechos
+         if (role == "admin")
+            button.add_action.right(ng-click="add_proc()")
+         div.empty(ng-hide="root.proces.length") No hay procesos para este postulado.
+         div.hecho_lista(ng-show="root.proces.length") 
+            div.hecho_lista_title
+               Hay {{root.proces.length}} procesos para este postulado.
+            div.hecho_titulo(ng-class="{selected: $index==root.selectedProcIndex, dirty: proc.dirty}" ng-click="get_proc($index)" ng-repeat="proc in root.proces") {{proc.titulo}}
+
+
+      div.dialog(ng-show="root.create_proc")    
+         h2.info_subtitle Agregar nuevo proceso
+         label.form Titulo del proceso
+         br
+         input.dialog_input(ng-model="root.new_proc_title" name="root.new_proc_title" required type="text")
+         br
+         button.buttons(ng-click="crea_proc()" ng-disabled="invalid_form") Crear proceso
+         button.buttons(ng-click="cancela_crea_proc()") Cancelar
+
+      div.datos_version(ng-show="root.proces.length")
+         h2.info_subtitle proc
+           div(input-inline-edit="root.proc.titulo" class="inline inline-heading" on-save="set_proc_dirty()" ng-focus="edit()" tabindex="10")
+         table.tab_form_table
+            tr
+               td
+                  label.small_form Relación
+                  div(input-inline-select-pp="root.proc.tipo" on-save="set_proc_dirty()" opciones="root.tipos_proc" ng-focus="edit()" tabindex="15")
+               td
+                  label.small_form Imputaciones
+                  div(input-inline-edit="root.proc.imputaciones" on-save="set_proc_dirty()" ng-focus="edit()" tabindex="21")
+               td
+                  label.small_form Condenas
+                  div(input-inline-edit="root.proc.condenas" on-save="set_proc_dirty()" ng-focus="edit()" tabindex="22")            
+            tr   
+               td
+                  label.small_form Absoluciones
+                  div(input-inline-edit="root.proc.absoluciones" on-save="set_proc_dirty()" ng-focus="edit()" tabindex="23")
+               td
+                  label.small_form Investigaciones
+                  div(input-inline-edit="root.proc.investigaciones" on-save="set_proc_dirty()" ng-focus="edit()" tabindex="23")
