--- a/views/partials/bienes.jade
+++ b/views/partials/bienes.jade
@@ -1,7 +1,7 @@
 div.info
    div.info_wrapper
       div.navegacion_hechos
-         if (role == "admin")
+         if (is_admin)
             button.add_action.right(ng-click="add_bien()")
          div.empty(ng-hide="root.bienes.length") No hay bienes para este postulado.
          div.hecho_lista(ng-show="root.bienes.length") 
