--- a/views/partials/jyp_delitos.jade
+++ b/views/partials/jyp_delitos.jade
@@ -1,6 +1,6 @@
 div.info_wrapper
    div.navegacion_hechos
-      if (role == "admin")
+      if (is_admin)
          button.add_action.right(ng-click="add_delito()")
       div.empty(ng-hide="root.delitos.length") No hay delitos para este postulado.
       div.hecho_lista(ng-show="root.delitos.length") 
