fixed login issues, and admin editing of postulados and users

--- a/views/admin/partials/index.jade
+++ b/views/admin/partials/index.jade
@@ -6,3 +6,4 @@ div.admin_portal(ng-controller="MenuCtrl")
       li.acciones_link(ng-click="admin_postulados()") Administrar postulados
       li.acciones_link(ng-click="admin_users()") Administrar usuarios
       li.acciones_link(ng-click="admin_codigos()") Editar lista de codigos penales
+      li.acciones_link(ng-click="informes()") Informes
