--- a/views/admin/partials/users.jade
+++ b/views/admin/partials/users.jade
@@ -14,13 +14,13 @@ div.data_container
                 tbody
                     tr.row(ng-class="{editing: is_dirty(user)}" ng-repeat="user in usuarios" ng-class-odd="'object_row_odd'" ng-class-even="'object_row_even'")
                       td 
-                        div(input-inline-edit="user.username" ng-focus="edit()" tabindex="{{ $index*10 + 1 }}")
+                        div(input-inline-edit="user.username" on-save="set_dirty(user)" ng-focus="edit()" tabindex="{{ $index*10 + 1 }}")
                       td 
-                        div(input-inline-edit="user.cedula" ng-focus="edit()" tabindex="{{ $index*10 + 2 }}")
+                        div(input-inline-edit="user.cedula" on-save="set_dirty(user)" ng-focus="edit()" tabindex="{{ $index*10 + 2 }}")
                       td 
-                        div(input-inline-password="user.password" ng-focus="edit()" tabindex="{{ $index*10 + 3 }}")
+                        div(input-inline-password="user.password" on-save="set_dirty(user)" ng-focus="edit()" tabindex="{{ $index*10 + 3 }}")
                       td 
-                        div(input-inline-edit="user.role" ng-focus="edit()" tabindex="{{ $index*10 + 4 }}")
+                        div(input-inline-edit="user.role" on-save="set_dirty(user)" ng-focus="edit()" tabindex="{{ $index*10 + 4 }}")
                       td
                             button.action(ng-show="is_dirty(user)" ng-click="save_user(user)") Salvar 
                             button.action(ng-hide="is_dirty(user)" ng-click="delete_user(user)") Eliminar
