--- a/views/tablero.jade
+++ b/views/tablero.jade
@@ -17,6 +17,7 @@ html(ng-app="jusypazApp" manifest="/cache.manifest" type="text/cache-manifest")
     script(src='/js/postulado_ctrl.js')
     script(src='/js/inline.js')
     script(src='/js/file_upload.js')
+    script(src='/js/d3.v3.min.js')
 
     title jusypaz - Tablero de inicio
 
