--- a/views/partials/hv.jade
+++ b/views/partials/hv.jade
@@ -37,7 +37,7 @@ div.info
             div(input-inline-edit="root.hoja.salud" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="24")
          td
             label.small_form Historia clínica
-            div(input-inline-edit="root.hoja.clinica" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="25")
+            div(input-inline-text="root.hoja.clinica" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="25")
          td
             label.small_form Otros nombres y apellidos adoptados
             div(input-inline-edit="root.hoja.otros_nombres" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="26")
